tests/type_errors/inferred_eq_with_function.nos
# expect_error: does not implement Eq
# Even without explicit [T: Eq], the == operator infers Eq constraint
# Passing functions should be caught at compile time
equals(a, b) = a == b
main() = equals((x) => x, (y) => y)
